--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "lib": ["es2020", "esnext.array", "DOM"]
   },
   "include": ["./lib/**/*.ts"],
-  "exclude": ["node_modules", "lib/Tests/*", "lib/Binary/GenerateStatics.ts"]
+  "exclude": ["node_modules", "lib/Tests/*", "lib/Binary/GenerateStatics.d.ts"]
 }
