--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
         "sourceType": "module",
         "project": "./tsconfig.json"
     },
-    "ignorePatterns": ["src/Tests/*"],
+    "ignorePatterns": ["lib/Tests/*"],
     "rules": {
         "@typescript-eslint/no-explicit-any": [
             "warn",
