--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@whiskeysockets/baileys",
-  "version": "6.8.0",
+  "name": "baileys",
+  "version": "6.7.9",
   "description": "WhatsApp API",
   "keywords": [
     "whatsapp",
@@ -17,7 +17,7 @@
     "url": "git@github.com:WhiskeySockets/Baileys.git"
   },
   "license": "MIT",
-  "author": "Whiskeysockets",
+  "author": "Adhiraj Singh",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
@@ -69,7 +69,7 @@
     "conventional-changelog-cli": "^2.2.2",
     "eslint": "^8.0.0",
     "jest": "^27.0.6",
-    "jimp": "^0.22.12",
+    "jimp": "^0.16.1",
     "json": "^11.0.0",
     "link-preview-js": "^3.0.0",
     "open": "^8.4.2",
@@ -82,7 +82,7 @@
     "typescript": "^4.6.4"
   },
   "peerDependencies": {
-    "jimp": "^0.22.12",
+    "jimp": "^0.16.1",
     "link-preview-js": "^3.0.0",
     "qrcode-terminal": "^0.12.0",
     "sharp": "^0.32.6"
