--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "@dannteam/baileys",
-  "version": "7.0.0",
-  "description": "WhatsApp API",
+  "name": "baileys",
+  "version": "6.6.0",
+  "description": "WhatsApp API Fixed By AxellNetwork", 
   "keywords": [
     "whatsapp",
     "js-whatsapp",
     "whatsapp-api",
     "whatsapp-web",
     "multi-device",
-    "newsletter",
-    "whatsapp-bot"
+    "md"
   ],
-  "homepage": "https://github.com/DannOfficial/Baileys",
+  "homepage": "https://github.com/WhiskeySockets/Baileys",
   "repository": {
-    "url": "git+ssh://git@github.com/DannOfficial/Baileys.git"
+    "url": "git@github.com:WhiskeySockets/Baileys.git"
   },
   "license": "MIT",
-  "author": "DannTeam",
+  "author": "AxellNetwork",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
@@ -44,23 +43,21 @@
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
     "@hapi/boom": "^9.1.3",
-    "async-lock": "^1.4.1",
     "audio-decode": "^2.1.3",
-    "axios": "^1.6.0",
+    "axios": "^1.3.3",
     "cache-manager": "4.0.1",
     "futoin-hkdf": "^1.5.1",
     "libphonenumber-js": "^1.10.20",
-    "libsignal": "github:WhiskeySockets/libsignal-node",
-    "lodash": "^4.17.21",
+    "libsignal": "github:adiwajshing/libsignal-node",
     "music-metadata": "^7.12.3",
     "node-cache": "^5.1.2",
-    "pino": "^7.0.5",
-    "protobufjs": "^6.11.3",
-    "uuid": "^10.0.0",
+    "pino": "^7.0.0",
+    "protobufjs": "^7.2.4",
+    "uuid": "^9.0.0",
     "ws": "^8.13.0"
   },
   "devDependencies": {
-    "@adiwajshing/eslint-config": "github:WhiskeySockets/eslint-config",
+    "@adiwajshing/eslint-config": "github:adiwajshing/eslint-config",
     "@types/got": "^9.6.11",
     "@types/jest": "^27.5.1",
     "@types/node": "^16.0.0",
@@ -70,22 +67,22 @@
     "eslint": "^8.0.0",
     "jest": "^27.0.6",
     "jimp": "^0.16.1",
-    "json": "^11.0.0",
-    "link-preview-js": "^3.0.5",
+    "link-preview-js": "^3.0.0",
     "open": "^8.4.2",
     "qrcode-terminal": "^0.12.0",
     "release-it": "^15.10.3",
-    "sharp": "^0.32.6",
+    "sharp": "^0.30.5",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.8.1",
     "typedoc": "^0.24.7",
-    "typescript": "^4.6.4"
+    "typescript": "^4.6.4",
+    "json": "^11.0.0"
   },
   "peerDependencies": {
     "jimp": "^0.16.1",
     "link-preview-js": "^3.0.0",
     "qrcode-terminal": "^0.12.0",
-    "sharp": "^0.32.6"
+    "sharp": "^0.32.2"
   },
   "peerDependenciesMeta": {
     "jimp": {
