--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@hapi/boom": "^9.1.3",
     "audio-decode": "^2.1.3",
     "axios": "^1.3.3",
+    "async-lock": "^1.4.1",
     "cache-manager": "4.0.1",
     "futoin-hkdf": "^1.5.1",
     "libphonenumber-js": "^1.10.20",
