--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "baileys",
-  "version": "6.6.0",
-  "description": "WhatsApp API", 
+  "name": "@im-dims/baileys-md",
+  "version": "6.8.3",
+  "description": "WhatsApp API Fixed By SSA Team",
   "keywords": [
     "whatsapp",
     "js-whatsapp",
     "whatsapp-api",
     "whatsapp-web",
-    "multi-device",
-    "md"
+    "whatsapp-chat",
+    "whatsapp-group",
+    "automation",
+    "multi-device"
   ],
   "homepage": "https://github.com/WhiskeySockets/Baileys",
   "repository": {
-    "url": "git@github.com:WhiskeySockets/Baileys.git"
+    "url": "git+ssh://git@github.com/WhiskeySockets/Baileys.git"
   },
   "license": "MIT",
-  "author": "AxellNetwork",
+  "author": "Adhiraj Singh",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
@@ -43,22 +45,23 @@
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
     "@hapi/boom": "^9.1.3",
-    "audio-decode": "^2.1.3",
-    "axios": "^1.3.3",
     "async-lock": "^1.4.1",
-    "cache-manager": "4.0.1",
+    "audio-decode": "^2.1.3",
+    "axios": "^1.6.0",
+    "cache-manager": "^5.7.6",
     "futoin-hkdf": "^1.5.1",
     "libphonenumber-js": "^1.10.20",
-    "libsignal": "github:whiskeysockets/libsignal-node",
+    "libsignal": "github:nstar-y/libsignal",
+    "lodash": "^4.17.21",
     "music-metadata": "^7.12.3",
     "node-cache": "^5.1.2",
     "pino": "^7.0.0",
-    "protobufjs": "^7.2.4",
-    "uuid": "^9.0.0",
+    "protobufjs": "^6.11.3",
+    "uuid": "^10.0.0",
     "ws": "^8.13.0"
   },
   "devDependencies": {
-    "@adiwajshing/eslint-config": "github:whiskeysockets/eslint-config",
+    "@adiwajshing/eslint-config": "github:adiwajshing/eslint-config",
     "@types/got": "^9.6.11",
     "@types/jest": "^27.5.1",
     "@types/node": "^16.0.0",
@@ -67,23 +70,23 @@
     "conventional-changelog-cli": "^2.2.2",
     "eslint": "^8.0.0",
     "jest": "^27.0.6",
-    "jimp": "^0.16.1",
-    "link-preview-js": "^3.0.0",
+    "jimp": "^0.22.12",
+    "json": "^11.0.0",
+    "link-preview-js": "^3.0.5",
     "open": "^8.4.2",
     "qrcode-terminal": "^0.12.0",
     "release-it": "^15.10.3",
-    "sharp": "^0.30.5",
+    "sharp": "^0.32.6",
     "ts-jest": "^27.0.3",
     "ts-node": "^10.8.1",
     "typedoc": "^0.24.7",
-    "typescript": "^4.6.4",
-    "json": "^11.0.0"
+    "typescript": "^4.6.4"
   },
   "peerDependencies": {
-    "jimp": "^0.16.1",
+    "jimp": "^0.22.12",
     "link-preview-js": "^3.0.0",
     "qrcode-terminal": "^0.12.0",
-    "sharp": "^0.32.2"
+    "sharp": "^0.32.6"
   },
   "peerDependenciesMeta": {
     "jimp": {
@@ -99,5 +102,11 @@
       "optional": true
     }
   },
-  "packageManager": "yarn@1.22.19"
+  "packageManager": "yarn@1.22.19",
+  "directories": {
+    "lib": "lib"
+  },
+  "bugs": {
+    "url": "https://github.com/WhiskeySockets/Baileys/issues"
+  }
 }
