--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@im-dims/baileys-md",
-  "version": "6.8.3",
-  "description": "WhatsApp API Fixed By SSA Team",
+  "name": "baileys",
+  "version": "6.7.12",
+  "description": "WhatsApp API",
   "keywords": [
     "whatsapp",
     "js-whatsapp",
